# iab-specs

./: .gitignore  BLUEPRINT_OPENRTB_NATIVE_12.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bump-version.sh  check.sh  cliff.toml  coverage.sh  format.sh  publish.sh  release.sh  rust-toolchain.toml  test.sh
crates/iab-specs-adcom/: Cargo.toml  README.md
crates/iab-specs-adcom/src/: lib.rs
crates/iab-specs-adcom/src/context/: app.rs  channel.rs  content.rs  data.rs  device.rs  distribution_channel.rs  dooh.rs  geo.rs  publisher.rs  regs.rs  segment.rs  site.rs  user.rs  user_agent.rs
crates/iab-specs-adcom/src/enums/: ad_position.rs  api_framework.rs  auction_type.rs  audit_status_code.rs  click_type.rs  creative_subtype_display.rs  event_tracking_method.rs  location_type.rs  mod.rs  native_data_asset_type.rs  native_image_asset_type.rs  pod_deduplication.rs  pod_sequence.rs  production_quality.rs  protocol.rs  start_delay.rs  user_agent_source.rs  video_linearity.rs
crates/iab-specs-adcom/src/media/: ad.rs  asset.rs  audit.rs  banner.rs  display.rs  event.rs  native.rs  title_asset.rs  video.rs  video_asset.rs
crates/iab-specs-adcom/src/placement/: asset_format.rs  audio_placement.rs  companion.rs  display_placement.rs  event_spec.rs  image_asset_format.rs  native_format.rs  placement.rs  video_placement.rs
crates/iab-specs-ads_txt/: Cargo.toml  README.md
crates/iab-specs-ads_txt/src/: ads_txt_root.rs  ads_txt_system.rs  lib.rs  manager_domain.rs  seller_relation_type.rs
crates/iab-specs-agentic_audience/: Cargo.toml  README.md
crates/iab-specs-agentic_audience/src/: lib.rs
crates/iab-specs-agentic_audience/src/v10/: mod.rs
crates/iab-specs-agentic_audience/src/v10/enums/: composition_type.rs  creative_signal_subtype.rs  distance_metric.rs  identity_signal_subtype.rs  model_type.rs  normalization_type.rs  query_intent_subtype.rs  reinforcement_signal_subtype.rs  signal_type.rs
crates/iab-specs-agentic_audience/src/v10/models/: embedding_envelope.rs  embedding_model.rs
crates/iab-specs-agentic_audience/src/v10/scoring/: campaign_head.rs
crates/iab-specs-agentic_direct/: Cargo.toml  README.md
crates/iab-specs-agentic_direct/src/: lib.rs
crates/iab-specs-agentic_direct/src/v21/: mod.rs
crates/iab-specs-agentic_direct/src/v21/a2a/: agent_card.rs  mod.rs  task_state_machine.rs
crates/iab-specs-agentic_direct/src/v21/entities/: account.rs  change_request.rs  line.rs  line_state_machine.rs  mod.rs  organization.rs  placement.rs  product.rs
crates/iab-specs-agentic_direct/src/v21/enums/: assignment_status.rs  order_status.rs  protocol_type.rs  security_scheme_type.rs  skill_input_mode.rs  task_state.rs
crates/iab-specs-agentic_direct/src/v21/jsonrpc/: error.rs  id.rs  mod.rs  notification.rs  request.rs  response.rs
crates/iab-specs-app_ads_txt/: Cargo.toml  README.md
crates/iab-specs-app_ads_txt/src/: app_ads_txt_root.rs  lib.rs
crates/iab-specs-artb/: Cargo.toml  README.md
crates/iab-specs-artb/src/: lib.rs
crates/iab-specs-artb/src/v10/: adjust_bid_payload.rs  adjust_deal_payload.rs  data_payload.rs  ids_payload.rs  margin.rs  metadata.rs  metrics_payload.rs  mod.rs  mutation.rs  originator.rs  rtb_request.rs  rtb_response.rs
crates/iab-specs-artb/src/v10/enums/: calculation_type.rs  intent.rs  lifecycle.rs  mod.rs  operation.rs  originator_type.rs
crates/iab-specs-buyer_agent/: Cargo.toml  README.md
crates/iab-specs-buyer_agent/src/: lib.rs
crates/iab-specs-buyer_agent/src/v10/: mod.rs
crates/iab-specs-buyer_agent/src/v10/enums/: approval_status.rs  campaign_status.rs  channel_type.rs
crates/iab-specs-buyer_agent/src/v10/models/: booked_line.rs  booking.rs  buyer_identity.rs  campaign.rs  channel_brief.rs  linear_tv.rs  negotiation.rs  ucp.rs  ucp_metadata.rs
crates/iab-specs-buyer_agent/src/v10/state_machines/: campaign_state_machine.rs  deal_state_machine.rs  mod.rs
crates/iab-specs-core/: Cargo.toml  README.md
crates/iab-specs-core/src/: errors.rs  extension.rs  lib.rs
crates/iab-specs-openrtb/: Cargo.toml  README.md
crates/iab-specs-openrtb/src/: lib.rs
crates/iab-specs-openrtb/src/common/: mod.rs  supply_chain.rs  supply_chain_node.rs
crates/iab-specs-openrtb/src/v25/: app.rs  audio.rs  banner.rs  bid.rs  content.rs  device.rs  format.rs  geo.rs  imp.rs  mod.rs  native.rs  producer.rs  publisher.rs  regs.rs  request.rs  response.rs  seat_bid.rs  source.rs  user.rs  video.rs
crates/iab-specs-openrtb/src/v26/: durfloors.rs  mod.rs  qty.rs  ref_settings.rs  refresh.rs
crates/iab-specs-openrtb/src/v30/: bid.rs  deal.rs  item.rs  metric.rs  mod.rs  openrtb.rs  request.rs  response.rs  seat_bid.rs
crates/iab-specs-openrtb/src/v30/spec/: audio.rs  display_format.rs  mod.rs  video.rs
crates/iab-specs-openrtb_native/: Cargo.toml  README.md
crates/iab-specs-openrtb_native/src/: lib.rs
crates/iab-specs-openrtb_native/src/v12/: mod.rs  request.rs  response.rs
crates/iab-specs-registry_agent/: Cargo.toml  README.md
crates/iab-specs-registry_agent/src/: lib.rs
crates/iab-specs-registry_agent/src/v10/: mod.rs
crates/iab-specs-registry_agent/src/v10/enums/: agent_type.rs
crates/iab-specs-registry_agent/src/v10/models/: agent_trust_info.rs  mod.rs  registered_agent.rs  registry_search_filter.rs  registry_search_result.rs  registry_source.rs
crates/iab-specs-registry_agent/src/v10/state_machines/: mod.rs  trust_state_machine.rs
crates/iab-specs-seller_agent/: Cargo.toml  README.md
crates/iab-specs-seller_agent/src/: lib.rs
crates/iab-specs-seller_agent/src/v10/: mod.rs
crates/iab-specs-seller_agent/src/v10/enums/: ad_server_type.rs  distribution_status.rs  mod.rs  negotiation_strategy_type.rs  organization_role.rs  package_type.rs  pricing_tier_type.rs  seller_order_status.rs  sync_status.rs
crates/iab-specs-seller_agent/src/v10/models/: change_request.rs  creative.rs  (+10 more)
crates/iab-specs-sellers_json/: Cargo.toml  README.md
crates/iab-specs-sellers_json/src/: lib.rs  seller.rs  seller_type.rs  sellers.rs  sellers_identifier.rs  sellers_identifier_name.rs  sellers_version.rs
(+340 files in other folders)
