[package]
name = "iab-specs"
version = "0.4.1"
edition = "2024"
description = "Unofficial Rust implementaton of various IAB specifications."
license = "Apache-2.0"
homepage = "https://github.com/remysaissy/iab-specs"
repository = "https://github.com/remysaissy/iab-specs"
authors = ["Rémy Saissy <remy.saissy@gmail.com>"]
readme = "README.md"
keywords = [
    "iab",
    "adstxt",
    "sellersjson",
    "artb",
    "openrtb"
]

[dependencies]
serde = { version = "1", features = ["serde_derive", "std"] }
serde_json = { version = "1", features = ["std"], optional = true }
serde_with = { version = "3", features = ["std"] }
serde_plain = { version = "1" }
serde_repr = { version = "0.1" }
derive_builder = { version = "0.20", features = ["std"] }
isosphere = { version = "0.2", optional = true }
thiserror = { version = "2", features = ["std"] }

[dev-dependencies]
serde_json = { version = "1", features = ["std"] }

[features]
default = []
ads_txt = ["dep:isosphere"]
app_ads_txt = ["ads_txt"]
sellers_json = ["dep:serde_json"]
adcom = []
openrtb_25 = ["adcom"]
openrtb_26 = ["openrtb_25"]
openrtb_30 = ["adcom"]
openrtb_native_12 = ["adcom"]
artb_10 = []
