[package]
name = "iab-specs-agentic_audience"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust implementation of IAB Agentic Audience v1.0 (Draft). Embedding exchange protocol for agent-to-agent audience targeting. Part of the iab-specs ecosystem."
keywords = ["iab", "agentic-audience", "embeddings", "audience-targeting", "advertising"]

[dependencies]
iab-specs-core = { path = "../iab-specs-core", version = "0.5.1", features = ["serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
