[package]
name = "iab-specs-agentic_direct"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust implementation of IAB Agentic Direct v2.1. OpenDirect + A2A Protocol for autonomous agent-to-agent advertising transactions with JSON-RPC 2.0. Part of the iab-specs ecosystem."
keywords = ["iab", "agentic-direct", "opendirect", "a2a-protocol", "advertising"]

[dependencies]
iab-specs-core = { path = "../iab-specs-core", version = "0.5.1", features = ["serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
