[package]
name = "iab-specs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, traits, and error handling for the iab-specs ecosystem. Provides the Extension trait, error types, and shared utilities used by all iab-specs sub-crates."
keywords = ["iab", "advertising", "adtech", "core", "serde"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_plain = { workspace = true }
derive_builder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
serde_json = ["dep:serde_json"]
