[package]
name = "iab-specs-openrtb_native"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust implementation of IAB OpenRTB Native Ads 1.2 specification. Asset-based native ad requests and responses with event tracking. Part of the iab-specs ecosystem."
keywords = ["iab", "openrtb-native", "native-ads", "advertising", "openrtb"]

[dependencies]
iab-specs-core = { path = "../iab-specs-core", version = "0.5.1" }
serde = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
